--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/client": "^3.0.0-beta.44",
+    "@apollo/link-context": "^2.0.0-beta.3",
+    "@apollo/react-hooks": "^3.1.5",
     "@emotion/core": "^10.0.27",
     "@emotion/native": "^10.0.27",
     "@react-native-community/datetimepicker": "^2.3.2",
@@ -20,6 +22,7 @@
     "@react-navigation/native": "^5.0.3",
     "@react-navigation/stack": "^5.0.3",
     "apollo-boost": "^0.4.7",
+    "apollo-link-context": "^1.0.20",
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.4",
     "graphql": "^14.6.0",
