--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@react-native-community/progress-bar-android": "^1.0.3",
     "@react-native-community/progress-view": "^1.0.3",
     "@react-native-community/push-notification-ios": "^1.6.0",
+    "@react-native-firebase/analytics": "^10.4.0",
+    "@react-native-firebase/app": "^10.4.0",
+    "@react-native-firebase/crashlytics": "^10.4.0",
     "@react-navigation/bottom-tabs": "^5.0.7",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.0.3",
